[#170333527] Add function to upload service logo
