# openapi/index.yaml
@@ -96,6 +96,42 @@ paths:
               service_id: 2b3e728c1a5d1efa035c
               service_name: service
               authorized_cidrs: []
+  "/services/{service_id}/logo":
+    parameters:
+      - name: service_id
+        in: path
+        type: string
+        required: true
+        description: The ID of a existing Service.
+      - name: body
+        in: body
+        required: true
+        schema:
+          $ref: "#/definitions/Logo"
+        description: The logo payload
+    put:
+      responses:
+        "201":
+          description: Logo uploaded.
+          headers:
+            Location:
+              description: Link to the uploaded logo
+              schema:
+                type: string
+        "400":
+          description: Invalid payload.
+          schema:
+            $ref: "#/definitions/ProblemJson"
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: No service found for the provided ID.
+        "500":
+          description: Internal server error
+      summary: Upload service logo.
+      operationId: uploadServiceLogo
   "/services":
     post:
       responses:
@@ -307,7 +343,15 @@ definitions:
     example: "12345678901"
   ExtendedProfile:
     $ref: "https://raw.githubusercontent.com/teamdigitale/io-functions-commons/master/openapi/definitions.yaml#/ExtendedProfile"
-
+  Logo:
+    type: object
+    properties:
+      logo:
+        type: string
+        format: byte
+        minLength: 1
+    required:
+      - logo
 responses: {}
 parameters:
   SandboxFiscalCode:
